chore(dao): rename ddp to dao as sub domain (#2)
This commit makes dao as the sub domain under mayadata.io

Signed-off-by: AmitKumarDas <amit.das@mayadata.io>

--- a/deploy/kubernetes/rbac.yaml
+++ b/deploy/kubernetes/rbac.yaml
@@ -1,20 +1,19 @@
 # This YAML file contains all RBAC objects that are necessary to 
-# run ddp storage provisioner.
+# run storage provisioner.
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ddp-storage-provisioner
-  namespace: ddp
-
+  name: storage-provisioner
+  namespace: dao
 ---
 # Provisioner must be able to work with following resources
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ddp-storage-provisioner
+  name: storage-provisioner
 rules:
-  - apiGroups: ["ddp.mayadata.io"]
+  - apiGroups: ["dao.mayadata.io"]
     resources: ["storages"]
     verbs: ["get", "list", "watch", "update"]
   - apiGroups: [""]
@@ -23,21 +22,19 @@ rules:
   - apiGroups: ["storage.k8s.io"]
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch", "create", "update"]
-
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ddp-storage-provisioner
+  name: storage-provisioner
 subjects:
   - kind: ServiceAccount
-    name: ddp-storage-provisioner
-    namespace: ddp
+    name: storage-provisioner
+    namespace: dao
 roleRef:
   kind: ClusterRole
-  name: ddp-storage-provisioner
+  name: storage-provisioner
   apiGroup: rbac.authorization.k8s.io
-
 ---
 # Provisioner must be able to work with configmaps or leases
 # in the current namespace if (and only if) leadership election 
@@ -45,24 +42,24 @@ roleRef:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: ddp
-  name: ddp-storage-provisioner-cfg
+  namespace: dao
+  name: storage-provisioner-cfg
 rules:
 - apiGroups: ["coordination.k8s.io"]
   resources: ["leases"]
   verbs: ["get", "watch", "list", "delete", "update", "create"]
-
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ddp-storage-provisioner-cfg
-  namespace: ddp
+  name: storage-provisioner-cfg
+  namespace: dao
 subjects:
   - kind: ServiceAccount
-    name: ddp-storage-provisioner
-    namespace: ddp
+    name: storage-provisioner
+    namespace: dao
 roleRef:
   kind: Role
-  name: ddp-storage-provisioner-cfg
+  name: storage-provisioner-cfg
   apiGroup: rbac.authorization.k8s.io
+---
