--- a/deploy/kubernetes/deployment.yaml
+++ b/deploy/kubernetes/deployment.yaml
@@ -1,29 +1,28 @@
 # This YAML file demonstrates how to deploy the stotage
 # provisioner. It depends on the definitions from namespace.yaml & 
 # rbac.yaml.
-
 ---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: ddp-storage-provisioner
-  namespace: ddp
+  name: storage-provisioner
+  namespace: dao
   labels:
-    ddp-project-name: storage-provisioner
+    dao-project-name: storage-provisioner
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ddp-storage-provisioner
+      app: storage-provisioner
   template:
     metadata:
       labels:
-        app: ddp-storage-provisioner
+        app: storage-provisioner
     spec:
-      serviceAccount: ddp-storage-provisioner
+      serviceAccount: storage-provisioner
       containers:
-        - name: ddp-storage-provisioner
-          image: index.docker.io/mayadataio/dao-storprovisioner:latest
+        - name: storage-provisioner
+          image: quay.io/amitkumardas/storage-provisioner:latest
           args:
             - "--v=5"
           env:
